# sam--product-management

./: .gitignore  README.md  README_GPT_INTEGRATION.md  main.py  setup.sh
Uploads/: Template de U.S 1.docx
app/infra/: gpt_service.py  jira_service.py  s3_service.py
app/modules/: cli.py  prompt_processor.py
app_development/: README.md  cli.py  example_gpt_usage.py  gpt_service.py  hierarchy_builder.py  items.py  jira_service.py  prompt_processor.py  s3_service.py  template_analysis.md  template_generator.py
app_development/__pycache__/: cli.cpython-312.pyc:Zone.Identifier
app_development/tests/: __init__.py
backend/: config.py  pyproject.toml  requirements_original.txt
backend/app/: main.py
backend/app/agents/: multi_agent_system.py
backend/app/modules/: hierarchy_builder.py  prompt_processor.py  template_generator.py
backend/app/services/: gpt_service.py  s3_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: AnimatedCircles.tsx  ChatInterface.tsx  Dashboard.tsx  ItemCreator.tsx  LoginScreen.tsx
tests/: test_app.py  test_detect_missing_type.py  test_gpt_service.py  test_hierarchy_builder.py  test_hierarchy_functions.py  test_prompt_processor.py  test_s3_service.py  test_template_generator.py  test_template_generator_simple.py
