[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.14"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
requests = {version = "^2.32.4", python = ">=3.12,<3.14"}
boto3 = {version = "^1.39.0", python = ">=3.12,<3.14"}
python-dotenv = {version = "^1.1.1", python = ">=3.12,<3.14"}
jira = {version = "^3.8.0", python = ">=3.12,<3.14"}
openai = {version = "^1.93.0", python = ">=3.12,<3.14"}
crewai = {version = ">=0.134.0", python = ">=3.12,<3.14"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
